--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@ canvas{background:#333;border:4px solid #fff;border-radius:12px}
 button{padding:12px 18px;font-size:18px;border:none;border-radius:10px;cursor:pointer}
 .overlay{position:absolute;top:0;left:0;width:100%;height:100%;display:flex;align-items:center;justify-content:center;background:rgba(0,0,0,.7)}
 .menu{background:#222;padding:30px;border-radius:16px;text-align:center}
-.menu h2{margin-bottom:10px}
 .menu button{width:200px;margin:8px 0}
 #countdown{font-size:72px;font-weight:bold}
 </style>
@@ -22,25 +21,22 @@ button{padding:12px 18px;font-size:18px;border:none;border-radius:10px;cursor:po
 <h1>🚗 Speed Rush</h1>
 <div id="hud" style="display:none">
 Score: <span id="score">0</span> |
+Best: <span id="best">0</span> |
 Level: <span id="level">1</span>
 </div>
 <canvas id="game" width="360" height="600"></canvas>
 
-<!-- START SCREEN -->
 <div id="startScreen" class="overlay">
   <div class="menu">
     <h2>Speed Rush</h2>
-    <p>Arcade + Pseudo-3D Racer</p>
     <button id="startBtn">▶ Start Game</button>
   </div>
 </div>
 
-<!-- COUNTDOWN -->
 <div id="countdownScreen" class="overlay" style="display:none">
   <div id="countdown">3</div>
 </div>
 
-<!-- GAME OVER -->
 <div id="gameOverScreen" class="overlay" style="display:none">
   <div class="menu">
     <h2>Game Over</h2>
@@ -56,69 +52,89 @@ Level: <span id="level">1</span>
 </div>
 
 <script>
-const canvas = document.getElementById('game');
-const ctx = canvas.getContext('2d');
+const canvas=document.getElementById('game');
+const ctx=canvas.getContext('2d');
 
-const scoreEl = document.getElementById('score');
-const levelEl = document.getElementById('level');
-const finalScoreEl = document.getElementById('finalScore');
+const scoreEl=document.getElementById('score');
+const bestEl=document.getElementById('best');
+const levelEl=document.getElementById('level');
+const finalScoreEl=document.getElementById('finalScore');
+const startScreen=document.getElementById('startScreen');
+const countdownScreen=document.getElementById('countdownScreen');
+const gameOverScreen=document.getElementById('gameOverScreen');
+const controls=document.getElementById('controls');
+const hud=document.getElementById('hud');
+const countdownEl=document.getElementById('countdown');
 
-const startScreen = document.getElementById('startScreen');
-const countdownScreen = document.getElementById('countdownScreen');
-const gameOverScreen = document.getElementById('gameOverScreen');
-const controls = document.getElementById('controls');
-const hud = document.getElementById('hud');
-const countdownEl = document.getElementById('countdown');
+const left=document.getElementById('left');
+const right=document.getElementById('right');
+const nitro=document.getElementById('nitro');
+const startBtn=document.getElementById('startBtn');
+const restartBtn=document.getElementById('restartBtn');
 
-let running = false;
-let score = 0, level = 1;
-let baseSpeed = 4;
+let running=false;
+let score=0,level=1;
+let baseSpeed=4;
+let nitroActive=false;
+let bestScore=Number(localStorage.getItem('bestScore')||0);
 
-const lanes = [60,155,250];
-let currentLane = 1;
-const car = { x: lanes[1], y: 460, w: 50, h: 95 };
-const obstacles = [];
+// 🔊 SOUND EFFECTS
+const engineSound=new Audio('https://cdn.pixabay.com/download/audio/2021/08/04/audio_8b1f4ef0a1.mp3');
+engineSound.loop=true;engineSound.volume=0.3;
+const crashSound=new Audio('https://cdn.pixabay.com/download/audio/2022/03/10/audio_6c1c6a9c0a.mp3');
+const nitroSound=new Audio('https://cdn.pixabay.com/download/audio/2022/02/23/audio_3c2c3db5d5.mp3');
+
+const lanes=[60,155,250];
+let currentLane=1;
+const car={x:lanes[1],y:460,w:52,h:100};
+const obstacles=[];
 
 function drawRoad(){
-  ctx.fillStyle='#444';
-  ctx.fillRect(0,0,canvas.width,canvas.height);
-  ctx.strokeStyle='#fff';
-  ctx.setLineDash([18,18]);
-  lanes.forEach(l=>{
-    ctx.beginPath();ctx.moveTo(l+25,0);ctx.lineTo(l+40,600);ctx.stroke();
-  });
+  ctx.fillStyle='#444';ctx.fillRect(0,0,canvas.width,canvas.height);
+  ctx.strokeStyle='#fff';ctx.setLineDash([18,18]);
+  lanes.forEach(l=>{ctx.beginPath();ctx.moveTo(l+25,0);ctx.lineTo(l+40,600);ctx.stroke();});
   ctx.setLineDash([]);
 }
 
-function drawCar(x,y,w,h,color){
+// 🚗 MORE REALISTIC CAR DRAWING
+function drawCar(x,y,w,h,color,nitroFx=false){
+  // shadow
   ctx.fillStyle='rgba(0,0,0,.4)';
-  ctx.beginPath();ctx.ellipse(x+w/2,y+h+6,w/2,8,0,0,Math.PI*2);ctx.fill();
+  ctx.beginPath();ctx.ellipse(x+w/2,y+h+8,w/2,10,0,0,Math.PI*2);ctx.fill();
 
-  ctx.fillStyle=color;
+  // body gradient
+  const g=ctx.createLinearGradient(x,y,x,y+h);
+  g.addColorStop(0,'#fff');g.addColorStop(0.3,color);g.addColorStop(1,'#000');
+  ctx.fillStyle=g;
   ctx.beginPath();ctx.moveTo(x+6,y);ctx.lineTo(x+w-6,y);ctx.lineTo(x+w,y+h);ctx.lineTo(x,y+h);ctx.closePath();ctx.fill();
 
-  ctx.fillStyle='rgba(200,230,255,.85)';
-  ctx.fillRect(x+w*0.2,y+h*0.08,w*0.6,h*0.22);
+  // windshield
+  ctx.fillStyle='rgba(180,220,255,.85)';
+  ctx.fillRect(x+w*0.2,y+h*0.1,w*0.6,h*0.25);
 
+  // wheels
   ctx.fillStyle='#111';
   [0.25,0.65].forEach(p=>{
-    ctx.beginPath();ctx.arc(x-2,y+h*p,8,0,Math.PI*2);ctx.fill();
-    ctx.beginPath();ctx.arc(x+w+2,y+h*p,8,0,Math.PI*2);ctx.fill();
+    ctx.beginPath();ctx.arc(x-3,y+h*p,9,0,Math.PI*2);ctx.fill();
+    ctx.beginPath();ctx.arc(x+w+3,y+h*p,9,0,Math.PI*2);ctx.fill();
   });
+
+  // 🔥 nitro flame
+  if(nitroFx){
+    ctx.fillStyle='orange';
+    ctx.beginPath();ctx.moveTo(x+w/2-6,y+h);ctx.lineTo(x+w/2+6,y+h);ctx.lineTo(x+w/2,y+h+22);ctx.fill();
+  }
 }
 
 function spawnObstacle(){
-  obstacles.push({
-    lane:Math.floor(Math.random()*3),
-    y:-140,
-    w:50,
-    h:Math.random()>0.7?130:95,
-    color:'#1976d2'
-  });
+  obstacles.push({lane:Math.floor(Math.random()*3),y:-140,w:52,h:100,color:'#1976d2'});
 }
 
 function gameOver(){
   running=false;
+  engineSound.pause();
+  crashSound.play();
+  if(score>bestScore){bestScore=score;localStorage.setItem('bestScore',bestScore);}  
   finalScoreEl.textContent=score;
   gameOverScreen.style.display='flex';
 }
@@ -126,7 +142,10 @@ function gameOver(){
 function update(){
   if(!running) return;
   drawRoad();
-  drawCar(car.x,car.y,car.w,car.h,'#d32f2f');
+  drawCar(car.x,car.y,car.w,car.h,'#d32f2f',nitroActive);
+
+  // 🔊 Engine pitch increases with speed
+  engineSound.playbackRate=1+(baseSpeed-4)*0.08;
 
   for(let i=obstacles.length-1;i>=0;i--){
     const o=obstacles[i];
@@ -136,38 +155,29 @@ function update(){
     if(o.y>600){
       obstacles.splice(i,1);
       score++;
+      if(score>bestScore){bestScore=score;localStorage.setItem('bestScore',bestScore);}      
       if(score%5===0) level++;
       scoreEl.textContent=score;
+      bestEl.textContent=bestScore;
       levelEl.textContent=level;
     }
 
-    if(Math.abs(lanes[o.lane]-car.x)<40 && Math.abs(o.y-car.y)<70){
-      gameOver();return;
-    }
+    if(Math.abs(lanes[o.lane]-car.x)<40 && Math.abs(o.y-car.y)<70){gameOver();return;}
   }
   requestAnimationFrame(update);
 }
+}
 
 function startCountdown(){
-  let count=3;
-  countdownEl.textContent=count;
-  countdownScreen.style.display='flex';
-  const timer=setInterval(()=>{
-    count--;
-    if(count>0){countdownEl.textContent=count;}
-    else{
-      clearInterval(timer);
-      countdownScreen.style.display='none';
-      running=true;update();
-    }
-  },1000);
+  let c=3;countdownEl.textContent=c;countdownScreen.style.display='flex';
+  const t=setInterval(()=>{c--;if(c>0)countdownEl.textContent=c;else{clearInterval(t);countdownScreen.style.display='none';running=true;engineSound.play();update();}},1000);
 }
 
 function startGame(){
-  score=0;level=1;currentLane=1;
-  obstacles.length=0;
-  car.x=lanes[1];
+  score=0;level=1;currentLane=1;baseSpeed=4;nitroActive=false;
+  obstacles.length=0;car.x=lanes[1];
   scoreEl.textContent=0;
+  bestEl.textContent=bestScore;
   levelEl.textContent=1;
   startScreen.style.display='none';
   gameOverScreen.style.display='none';
@@ -175,23 +185,26 @@ function startGame(){
   hud.style.display='block';
   startCountdown();
 }
+}
 
-// BUTTON CONTROLS
 left.onclick=()=>{if(currentLane>0){currentLane--;car.x=lanes[currentLane];}};
 right.onclick=()=>{if(currentLane<2){currentLane++;car.x=lanes[currentLane];}};
-nitro.onclick=()=>{baseSpeed+=2;setTimeout(()=>baseSpeed-=2,1200)};
+nitro.onclick=()=>{
+  if(nitroActive) return;
+  nitroActive=true;nitroSound.play();baseSpeed+=3;
+  setTimeout(()=>{baseSpeed-=3;nitroActive=false;},1500);
+};
 
-// KEYBOARD CONTROLS (FIXED)
 document.addEventListener('keydown',e=>{
   if(!running) return;
-  if(e.key==='ArrowLeft' && currentLane>0){currentLane--;car.x=lanes[currentLane];}
-  if(e.key==='ArrowRight' && currentLane<2){currentLane++;car.x=lanes[currentLane];}
+  if(e.key==='ArrowLeft'&&currentLane>0){currentLane--;car.x=lanes[currentLane];}
+  if(e.key==='ArrowRight'&&currentLane<2){currentLane++;car.x=lanes[currentLane];}
 });
 
 startBtn.onclick=startGame;
 restartBtn.onclick=startGame;
 
-setInterval(()=>running && spawnObstacle(),1200);
+setInterval(()=>running&&spawnObstacle(),1200);
 </script>
 </body>
 </html>
